# ChatLord

./: .gitignore  docker-compose.yml  dockerfile  pyproject.toml
app/: config.py  main.py
app/ai/: ai_response.py  router.py
bot/: bot.py  config.py
